erDiagram
    HUB_CUSTOMER_SEGMENT {
        string HK_Customer_Segment_ID PK "Хэш-ключ сегмента клиентов"
        string Business_Key UK "Бизнес-ключ: Segment+City+State+PostalCode"
        timestamp Load_DTS "Дата загрузки (общая для всей загрузки)"
        string Record_Source "Источник: Superstore_CSV"
    }

    HUB_PRODUCT {
        string HK_Product_ID PK "Хэш-ключ продукта"
        string Business_Key UK "Бизнес-ключ: SubCategory+Category"
        timestamp Load_DTS "Дата загрузки (общая для всей загрузки)"
        string Record_Source "Источник: Superstore_CSV"
    }

    HUB_LOCATION {
        string HK_Location_ID PK "Хэш-ключ локации"
        string Business_Key UK "Бизнес-ключ: PostalCode"
        timestamp Load_DTS "Дата загрузки (общая для всей загрузки)"
        string Record_Source "Источник: Superstore_CSV"
    }

    HUB_SHIP_MODE {
        string HK_Ship_Mode_ID PK "Хэш-ключ способа доставки"
        string Business_Key UK "Бизнес-ключ: ShipMode"
        timestamp Load_DTS "Дата загрузки (общая для всей загрузки)"
        string Record_Source "Источник: Superstore_CSV"
    }

    LINK_SALES_TRANSACTION {
        string HK_Sales_ID PK "Хэш-ключ транзакции продажи"
        string HK_Customer_Segment_ID FK "Ссылка на сегмент клиентов"
        string HK_Product_ID FK "Ссылка на продукт"
        string HK_Location_ID FK "Ссылка на локацию"
        string HK_Ship_Mode_ID FK "Ссылка на способ доставки"
        timestamp Load_DTS "Дата загрузки (общая для всей загрузки)"
        string Record_Source "Источник: Superstore_CSV"
    }

    SAT_CUSTOMER_SEGMENT_DETAILS {
        string HK_Customer_Segment_ID PK,FK "Ссылка на хаб сегмента клиентов"
        timestamp Load_DTS PK "Дата загрузки (общая для всей загрузки)"
        string Segment "Сегмент"
        string City "Город"
        string State "Штат"
        string Postal_Code "Почтовый индекс"
        string Region "Регион"
        string Country "Страна"
        string Hash_Diff "Хэш для отслеживания изменений"
        string Record_Source "Источник: Superstore_CSV"
    }

    SAT_PRODUCT_DETAILS {
        string HK_Product_ID PK,FK "Ссылка на хаб продукта"
        timestamp Load_DTS PK "Дата загрузки (общая для всей загрузки)"
        string Category "Категория"
        string Sub_Category "Подкатегория"
        string Hash_Diff "Хэш для отслеживания изменений"
        string Record_Source "Источник: Superstore_CSV"
    }

    SAT_LOCATION_DETAILS {
        string HK_Location_ID PK,FK "Ссылка на хаб локации"
        timestamp Load_DTS PK "Дата загрузки (общая для всей загрузки)"
        string City "Город"
        string State "Штат"
        string Region "Регион"
        string Country "Страна"
        string Hash_Diff "Хэш для отслеживания изменений"
        string Record_Source "Источник: Superstore_CSV"
    }

    SAT_SHIP_MODE_DETAILS {
        string HK_Ship_Mode_ID PK,FK "Ссылка на хаб способа доставки"
        timestamp Load_DTS PK "Дата загрузки (общая для всей загрузки)"
        string Ship_Mode "Способ доставки"
        string Hash_Diff "Хэш для отслеживания изменений"
        string Record_Source "Источник: Superstore_CSV"
    }

    SAT_SALES_DETAILS {
        string HK_Sales_ID PK,FK "Ссылка на линк транзакции"
        timestamp Load_DTS PK "Дата загрузки (общая для всей загрузки)"
        numeric Sales "Сумма продажи"
        integer Quantity "Количество"
        numeric Discount "Скидка"
        numeric Profit "Прибыль"
        string Hash_Diff "Хэш для отслеживания изменений"
        string Record_Source "Источник: Superstore_CSV"
    }

    HUB_CUSTOMER_SEGMENT ||--o{ SAT_CUSTOMER_SEGMENT_DETAILS : has
    HUB_PRODUCT ||--o{ SAT_PRODUCT_DETAILS : has
    HUB_LOCATION ||--o{ SAT_LOCATION_DETAILS : has
    HUB_SHIP_MODE ||--o{ SAT_SHIP_MODE_DETAILS : has
    
    HUB_CUSTOMER_SEGMENT ||--o{ LINK_SALES_TRANSACTION : references
    HUB_PRODUCT ||--o{ LINK_SALES_TRANSACTION : references
    HUB_LOCATION ||--o{ LINK_SALES_TRANSACTION : references
    HUB_SHIP_MODE ||--o{ LINK_SALES_TRANSACTION : references
    LINK_SALES_TRANSACTION ||--o{ SAT_SALES_DETAILS : has
